--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261562963472651%22%3A%22fNatH9Fz%22%2C%2261564107626890%22%3A%22BsUtOw5h%22%7D",
+        "value": "%7B%2261562963472651%22%3A%22eHHPy8ia%22%2C%2261564107626890%22%3A%22BsUtOw5h%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.681Z",
-        "lastAccessed": "2024-08-12T04:42:31.681Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "wd",
@@ -77,52 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "c_user",
-        "value": "61564107626890",
+        "value": "61562963472651",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
+    },
+    {
+        "key": "fr",
+        "value": "0AbdJG6jOAE5DAe56.AWUyEmP1EvI7A876jZnNU-Ags7A.BmuZOG..AAA.0.0.BmuZON.AWVsS1i4IRA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "xs",
-        "value": "19%3AWc25vjVfDVgU9A%3A2%3A1723437241%3A-1%3A-1",
+        "value": "45%3AEmWSPSSb2gABeA%3A2%3A1723437966%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
-    },
-    {
-        "key": "m_page_voice",
-        "value": "61564107626890",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "fbl_st",
-        "value": "100738049%3BT%3A28723961",
+        "value": "101036146%3BT%3A28723966",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723437712",
+        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723437968",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:42:31.682Z",
-        "lastAccessed": "2024-08-12T04:42:31.682Z"
+        "creation": "2024-08-12T04:46:27.707Z",
+        "lastAccessed": "2024-08-12T04:46:27.707Z"
     }
 ]
