--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261562963472651%22%3A%22eHHPy8ia%22%2C%2261564107626890%22%3A%22BsUtOw5h%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22BsUtOw5h%22%2C%2261562963472651%22%3A%22OMZV4jiF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.026Z",
+        "lastAccessed": "2024-08-12T05:02:45.026Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.026Z",
+        "lastAccessed": "2024-08-12T05:02:45.026Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
-    },
-    {
-        "key": "wd",
-        "value": "720x1329",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "c_user",
@@ -95,43 +86,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWUyEmP1EvI7A876jZnNU-Ags7A.BmuZOG..AAA.0.0.BmuZON.AWVsS1i4IRA",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "xs",
-        "value": "45%3AEmWSPSSb2gABeA%3A2%3A1723437966%3A-1%3A14749",
+        "value": "11%3AXeySzAot_gyzyg%3A2%3A1723438937%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "fbl_st",
-        "value": "101036146%3BT%3A28723966",
+        "value": "100737532%3BT%3A28723982",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723437968",
+        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723438943",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T04:46:27.707Z",
-        "lastAccessed": "2024-08-12T04:46:27.707Z"
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
+    },
+    {
+        "key": "fr",
+        "value": "0AbdJG6jOAE5DAe56.AWUG8u4xYLOiKCSP_m9fH8jooPo.BmuZOG..AAA.0.0.BmuZdl.AWWx9ElH28A",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
+    },
+    {
+        "key": "wd",
+        "value": "1782x3292",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723438955503%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T05:02:45.027Z",
+        "lastAccessed": "2024-08-12T05:02:45.027Z"
     }
 ]
