--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22BsUtOw5h%22%2C%2261562963472651%22%3A%2278sfNq1O%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22BsUtOw5h%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,26 +77,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723438943",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "wd",
-        "value": "1782x3292",
+        "value": "720x1329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "c_user",
@@ -104,34 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "xs",
-        "value": "35%3A3H-o0lpt8ZkxYw%3A2%3A1723443994%3A-1%3A14749",
+        "value": "40%3AaIxTTP_tr22aWg%3A2%3A1723445245%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.199Z",
+        "lastAccessed": "2024-08-12T06:47:36.199Z"
     },
     {
         "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWVVYr1_VMse5b4bFy3XcfzqHOw.BmuZOG..AAA.0.0.Bmuasc.AWWSfZlcHbc",
+        "value": "0AbdJG6jOAE5DAe56.AWVaAHBTT2J_TMfSRG-Q4luQZJ0.BmuZOG..AAA.0.0.Bmua_-.AWWnF6Rhuhs",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.200Z",
+        "lastAccessed": "2024-08-12T06:47:36.200Z"
     },
     {
-        "key": "presence",
-        "value": "C%7B%22lm3%22%3A%22g.7520677604711022%22%2C%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723444006666%2C%22v%22%3A1%7D",
+        "key": "fbl_st",
+        "value": "101038567%3BT%3A28724087",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T06:38:40.972Z",
-        "lastAccessed": "2024-08-12T06:38:40.972Z"
+        "creation": "2024-08-12T06:47:36.200Z",
+        "lastAccessed": "2024-08-12T06:47:36.200Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723445247",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T06:47:36.200Z",
+        "lastAccessed": "2024-08-12T06:47:36.200Z"
     }
 ]
