--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564107626890%22%3A%22BsUtOw5h%22%2C%2261562963472651%22%3A%22PzdG4k8c%22%7D",
+        "value": "%7B%2261564107626890%22%3A%22BsUtOw5h%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.588Z"
     },
     {
         "key": "dpr",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.588Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,17 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
-    },
-    {
-        "key": "wd",
-        "value": "720x1329",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     },
     {
         "key": "c_user",
@@ -95,43 +86,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWXib_Q8pAi6zVyApLtgRryk29s.BmuZOG..AAA.0.0.BmufeW.AWXAty0XyW4",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     },
     {
         "key": "xs",
-        "value": "41%3Aiynv03K-LgBZHg%3A2%3A1723463574%3A-1%3A14749",
+        "value": "18%3AZ4TLMKT0662h8g%3A2%3A1723465400%3A-1%3A14749",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723463577",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     },
     {
         "key": "fbl_st",
-        "value": "101026603%3BT%3A28724392",
+        "value": "101337072%3BT%3A28724423",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-08-12T11:53:24.612Z",
-        "lastAccessed": "2024-08-12T11:53:24.612Z"
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2590%3Btimestamp%3A1723465403",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
+    },
+    {
+        "key": "wd",
+        "value": "1782x3292",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
+    },
+    {
+        "key": "fr",
+        "value": "0AbdJG6jOAE5DAe56.AWUNflgqAqned6LNpfvmgbNVzaA.BmuZOG..AAA.0.0.Bmuf7i.AWU3mMuZ6g8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1723465445901%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-08-12T12:24:13.589Z",
+        "lastAccessed": "2024-08-12T12:24:13.589Z"
     }
 ]
